assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

  }

  :root {
    --primary-color: #fce138;
    --secondary-color: #024e76;
    --tertiary-color: #39a6b2;
  }

body {
    /* more on this crazy alphanumerical value in a minute! */
  color: var(--tertiary-color);
  font-family: Helvetica, Arial, sans-serif;
  }

/* apply styles to <header> */
header {
    padding: 20px 35px;
    background-color: var(--tertiary-color);

    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

    position: -webkit-sticky;
    position: sticky;
    top: 0;

    background-image: url("../img/hero-bg.jpg");
    background-attachment: fixed;
    background-position: 80%;

    z-index: 99;
  }

header h1 {
    font-weight: bold;
    font-size: 36px;
    color: var(--primary-color);
    margin: 0;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);

  }

  header a {
    text-decoration: none;
    color: var(--primary-color);
  }

  header nav {
    margin: 7px 0;
  }

  header nav ul{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    }

  header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);

  }

  header nav ul li a:hover {
    background: var(--primary-color);
    color: var(--secondary-color);
    border-radius: 15px;
    text-shadow: none;
  }
  

footer {
    background: var(--primary-color);
    width: 100%;
    padding: 40px 35px;

    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

footer h2 {
    color: var(--secondary-color);
    font-size: 30px;
    margin: 0;
  }

footer div {
    line-height: 1.5;
    text-align: right;
  }

footer a {
    color: var(--secondary-color);
  }

  section {
    padding: 60px;
  }

/* Hero Style Start */
.hero {
  background-image: url("../img/hero-bg.jpg");
  background-attachment: fixed;
  background-position: 80%;

  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: flex-start;
}

.hero-form {
  border: 3px solid var(--secondary-color);
  background-color: #fce238c4;
  padding: 20px;
  color: var(--secondary-color);
  width: 40%;
  margin:3.5%;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  border-radius: 15px;
}

.hero-form h3 {
  font-size: 24px;
  margin: 0;
}

.hero-form p {
  margin: 5px 0 15px 0;
}

.form-input {
  border: 1px solid var(--secondary-color);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: var(--secondary-color);
  width: 100%;
  margin-bottom: 15px;
  border-radius: 10px;
  background-color: rgba(255,255,255, 0.70);
}
.form-input:focus {
  background-color: rgba(255,255,255, 1);
  outline: none;

}

.hero-form label {
  margin: 0 5px;
}

.hero-form button {
  color: var(--primary-color);
  background-color: var(--secondary-color);
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  border-radius: 10px;
}
.hero-form button:hover {
  background-color: var(--tertiary-color);  
}
.checkbox-wrapper input, .radio-wrapper input {
  opacity: 0;
}
.checkbox-wrapper label, .radio-wrapper label {
  position: relative;
  left: 10px;
  margin: 10px;
  line-height: 1.6;
}
.checkbox-wrapper label::before, .radio-wrapper label::before {
  content: "";
  height: 20px;
  width: 20px;
  background: rgba(255, 255, 255, 0.75);  
  border: 1px solid var(--secondary-color);  
  position: absolute;
  top: -4px;
  left: -30px;
  border-radius: 50%;
}
.radio-wrapper label::after {
  content: "";
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: var(--secondary-color);
  position: absolute;
  left: -29px;
  top: -3px;
  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));

}

.checkbox-wrapper label::after {
  content: "";
  height: 6px;
  width: 14px;
  border-left: 2px solid var(--secondary-color);
  border-bottom: 2px solid var(--secondary-color);
  position: absolute;
  left: -26px;
  top: 1px;
  transform: rotate(-58deg);
}

.checkbox-wrapper input + label::after, 
.radio-wrapper input + label::after {
  content: none;
}

.checkbox-wrapper input:checked + label::after, 
.radio-wrapper input:checked + label::after {
  content: "";
}

.hero-cta {
  width: 35%;
  text-align: right;
  margin: 3.5%;
  color: #fff;
  font-size: 18px;
  line-height: 1.2;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.25);

}

.hero-cta h2 {
  font-style: italic;
  font-size: 55px;
  color: var(--primary-color);
}
/* HERO STYLES END */
.flex-row {
  display: flex;
}

.intro h2 {
  font-size: 55px;
  color: var(--secondary-color);
  margin-bottom: 35px;
  padding: 0 100px 20px 100px;
  border-bottom: 3px solid;
  border-color: var(--primary-color);
  display: inline-block;

}

.intro p {
  line-height: 1.7;
  color: var(--tertiary-color);
  width: 80%;
  font-size: 20px;
  margin: 0 auto;
  text-align: center;
}

.section-title {
  font-size: 48px;
  border-bottom: 3px solid;
  color: var(--secondary-color);
  padding-bottom: 20px;
  text-align: center;
  margin: 0 auto 35px auto;
  width: 50%;
}

.primary-border {
  border-color: var(--primary-color);
}

.secondary-border {
  border-color: var(--tertiary-color);
}
.steps{
  background-color: var(--primary-color);
}

.step {
  background-color: var(--primary-color);
  margin: 0px auto;
  width: 80%;
  padding: 25px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}

.step h3 {
  color: var(--secondary-color);
  font-size: 46px;
  flex: 1 30%;
}

.step-info {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  flex: 2 70%;
}
.step-img {
  flex: 1 12%;
  margin-right: 20px;
}
.step-img img {
  max-width: 100%;
}
.step-text{
  flex: 12;
}
.step-text p {
  color: var(--tertiary-color);
  font-size: 18px;
}

.step-text h4 {
  font-size: 26px;
  line-height: 1.5;
  color: var(--secondary-color);
}

.step:not(:last-child) {
  border-bottom: 1px solid var(--tertiary-color);
}

.step:last-child {
  border-bottom: none;
}

.trainers{
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.trainer {
  flex: 1;
  background: var(--secondary-color);
  color: var(--primary-color);
  margin: 20px;
}

.trainer-1 {
  background-image: url("../img/trainer-1.jpg");
}

.trainer-2 {
  background-image: url("../img/trainer-2.jpg");
}
.trainer-3 {
  background-image: url("../img/trainer-3.jpg");
}

.trainer-img {
  width: 100%;
  min-height: 300px;
  display: flex;
  padding: 15px;
  align-items: flex-end;
  background-size: cover;
  position:relative;
}

.trainer-img::after {
  content: "";
  background: linear-gradient(rgba(255,255,56,0.3), var(--secondary-color));
  height: 100%;
  width: 100%;
  left: 80px;
  top: 0;
  left: 0;
  position: absolute;
  opacity: 0;
  transition: ease-in 1s;
}

.trainer-img h3 {
  position: relative;
  z-index: 10;
  top:400px;
  overflow:hidden;
  transition:0.6s;
}

.trainer-img h4 {
  position: relative;
  z-index: 10;
  top:400px;
  overflow:hidden;
  transition:0.8s;
  transition-delay:0.1s;
}

.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4, .trainer:hover .trainer-img::after {
  opacity:1;
  top:0;
}

.trainer-bio {
  padding: 25px;
  line-height: 1.3;

}

.trainer-bio h3 {
  font-size: 28px;
}

.trainer-bio h4 {
  font-weight: lighter;
  font-size: 22px;
  margin-bottom: 15px;
}

/* SERVICE STYLES BEGIN */
.services {
  background: var(--primary-color); 
}

.service-grid-wrapper {
  display: flex;
  width: 100%;
  justify-content: center;
}

.service-grid-container {
  background: lightyellow;
  width: 80%;
  display: grid;
  /* repeat(iterator, size) */
  grid-template-columns: 1fr repeat(2, 4fr);
  grid-template-rows: repeat(5, 1fr) 2fr;
  border: 2px solid var(--secondary-color);
  color:  var(--secondary-color);
  font-size: 1.2rem;
}

.service-grid-item {
  padding: 15px 0;
  border: 2px solid var(--secondary-color);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/* specific match */
.service-grid-item.basic {
  grid-column: 2 / span 1;
}

.service-grid-item.both {
  grid-column: 2 / span 2;
}

.service-grid-item.cancel {
  writing-mode: vertical-rl;
  transform: rotate(180deg);
  grid-column: 1;
  grid-row: 1 / -1;
}

.grid-head, .grid-price, .service-grid-item.cancel {
  font-size: 1.5rem;
  font-weight: bold;
}
/* REACH OUT STYLES START */
.contact {
  background: var(--secondary-color);
}

.contact h2 {
  color: var(--primary-color);
  width: 100%;
}

.contact-info {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.contact-info > * {
  flex: 1;
  margin: 15px;
}

.contact-info iframe {
  height: 400px;
}

.contact-info div {
  color: white;
}

.contact-form input, .contact-form textarea {
  border: 1px solid var(--secondary-color);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: var(--secondary-color);
  width: 100%;
  margin-bottom: 15px;
  margin-top: 7px;
  border-radius: 10px;
  background-color: rgba(255,255,255, 0.70);
}

.contact-form input:focus, .contact-form textarea:focus {
  background-color: rgba(255,255,255, 1);

}

.contact-form button {
  width: 100%;
  border: none;
  background: var(--primary-color);
  color: var(--secondary-color);
  text-align: center;
  padding: 15px 0;
  font-size: 16px;
  border-radius: 10px;
}
.contact-form button:hover {
  color: var(--primary-color);
  background: var(--tertiary-color);
}

.contact-info h3 {
  color: var(--primary-color);
  font-size: 32px;
}

.contact-info p, .contact-info address {
  margin: 20px 0;
  line-height: 1.5;
  font-size: 20px;
  font-style: normal;
  vertical-align: top;
}

.contact-info a {
  color: var(--primary-color);
}

/* REACH OUT STYLES END */

/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@media screen and (max-width: 980px) {
  header {
    padding-bottom: 0;
    justify-content: center;
    position: relative;
  }

  header h1 {
    width: 100%;
    text-align: center;
  }

  header nav ul {
    margin-top: 20px;
    width: 100%;
    justify-content: center;
  }

  header nav ul li a {
    font-size: 20px;
  }

  footer h2, footer div {
    text-align: center;
    width: 100%;
  }
  .hero-cta, .hero-form {
    width: 100%;
  }
  
  .hero-cta {
    text-align: center;
  }
  .section-title {
    width: 80%;
  }
  
  .trainer {
    flex: 0 70%;
  }
  
  .contact-info iframe{
    flex: 1 100%;
  }
  
  .service-grid-container {
    grid-template-columns: 1fr 1fr;
  }

  .service-grid-item.basic {
    grid-column: 1;
  }

  .service-grid-item.both {
    grid-column: 1 / -1;
  }

  .service-grid-item.cancel {
    transform: none;
    writing-mode: unset;
    grid-column: 1 / -1;
    grid-row: -1;
  }
}

/* MEDIA QUERY FOR TABLETS AND SMALLER */
@media screen and (max-width: 768px) {

  section {
    padding: 30px 15px;
  }

  .step h3 {
    flex: 1 100%;
    text-align: center;
  }

  .step-info {
    flex: 2 100%;
    text-align: center;
    justify-content: center;
  }

  .step-img {
    flex: 0 32%;
    margin-right: 0;
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .step-text {
    flex: 100%;  
  }
}

/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen and (max-width: 575px) {
  .hero-form button {
    width: 100%;
  }

  .section-title {
    width: 95%;
  }

  .intro p {
    width: 100%;
  }

  .trainer {
    flex: 0 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }
  
  .contact-form {
    order: 3;
  }
}

